--- a/README
+++ b/README
@@ -31,6 +31,11 @@ Installation
 ```
 - Lancer la commande « git clone https://github.com/Youmy001/PokeTap.git » dans un Gitbash
   OU aller sur www.github.com/Youmy001/Poketap et appuyer sur ZIP et extraire le tout dans un dossier quelconque
+- Sur Linux (basé sur Debian):
+	-sudo apt-get install libsdl1.2-dev
+	-sudo apt-get install libsdl-image1.2-dev
+	-sudo apt-get install libsdl-mixer1.2-dev
+	-sudo apt-get install libsdl-ttf2.0-dev
 - Ouvrir le fichier jeu_marmotte.ecf avec eiffelstudio
 - Bon jeu !
 ```
